--- a/widget.html
+++ b/widget.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Meteo Widget NYC</title>
+<title>Meteo Widget NYC Live</title>
 <style>
   body {
     margin: 0;
@@ -38,8 +38,8 @@
     gap: 8px;
   }
   .temp svg {
-    width: 32px;
-    height: 32px;
+    width: 40px; /* icone più grandi */
+    height: 40px;
     fill: #F3EEEE;
   }
   .desc {
@@ -58,53 +58,73 @@
     <div class="desc" id="desc">Caricamento...</div>
   </div>
 
-  <script>
-    const svgIcons = {
-      "01d": `<svg viewBox="0 0 64 64"><circle cx="32" cy="32" r="14"/></svg>`, // Sole
-      "02d": `<svg viewBox="0 0 64 64"><circle cx="32" cy="32" r="12"/><circle cx="44" cy="20" r="8"/></svg>`, // Poco nuvoloso
-      "03d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="20" ry="12"/></svg>`, // Nuvoloso
-      "09d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="20" ry="12"/><line x1="32" y1="40" x2="32" y2="50"/></svg>`, // Pioggia leggera
-      "10d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="20" ry="12"/><line x1="28" y1="40" x2="28" y2="50"/><line x1="36" y1="40" x2="36" y2="50"/></svg>`, // Pioggia
-      "13d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="20" ry="12"/><line x1="32" y1="40" x2="28" y2="50"/><line x1="32" y1="40" x2="36" y2="50"/></svg>`, // Neve
-      "11d": `<svg viewBox="0 0 64 64"><polygon points="32,16 36,28 48,28 38,36 42,48 32,40 22,48 26,36 16,28 28,28"/></svg>`, // Temporale
-      "50d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="24" ry="12"/></svg>` // Nebbia
+<script>
+const svgIcons = {
+  // Sole con raggi
+  "01d": `<svg viewBox="0 0 64 64">
+            <circle cx="32" cy="32" r="12"/>
+            <line x1="32" y1="2" x2="32" y2="14" stroke="#F3EEEE" stroke-width="2"/>
+            <line x1="32" y1="50" x2="32" y2="62" stroke="#F3EEEE" stroke-width="2"/>
+            <line x1="2" y1="32" x2="14" y2="32" stroke="#F3EEEE" stroke-width="2"/>
+            <line x1="50" y1="32" x2="62" y2="32" stroke="#F3EEEE" stroke-width="2"/>
+            <line x1="10" y1="10" x2="18" y2="18" stroke="#F3EEEE" stroke-width="2"/>
+            <line x1="46" y1="46" x2="54" y2="54" stroke="#F3EEEE" stroke-width="2"/>
+            <line x1="10" y1="54" x2="18" y2="46" stroke="#F3EEEE" stroke-width="2"/>
+            <line x1="46" y1="18" x2="54" y2="10" stroke="#F3EEEE" stroke-width="2"/>
+          </svg>`,
+  "02d": `<svg viewBox="0 0 64 64"><circle cx="32" cy="32" r="12"/><circle cx="44" cy="20" r="8"/></svg>`, // Poco nuvoloso
+  "03d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="20" ry="12"/></svg>`, // Nuvoloso
+  "09d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="20" ry="12"/><line x1="32" y1="40" x2="32" y2="50"/></svg>`, // Pioggia leggera
+  "10d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="20" ry="12"/><line x1="28" y1="40" x2="28" y2="50"/><line x1="36" y1="40" x2="36" y2="50"/></svg>`, // Pioggia
+  "13d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="20" ry="12"/><line x1="32" y1="40" x2="28" y2="50"/><line x1="32" y1="40" x2="36" y2="50"/></svg>`, // Neve
+  "11d": `<svg viewBox="0 0 64 64"><polygon points="32,16 36,28 48,28 38,36 42,48 32,40 22,48 26,36 16,28 28,28"/></svg>`, // Temporale
+  "50d": `<svg viewBox="0 0 64 64"><ellipse cx="32" cy="32" rx="24" ry="12"/></svg>` // Nebbia
+};
+
+async function getWeather() {
+  const lat = 40.7128, lon = -74.0060;
+  try {
+    const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m,weathercode&timezone=auto`);
+    const data = await res.json();
+
+    const temp = Math.round(data.current.temperature_2m);
+    const code = data.current.weathercode;
+
+    const conditions = {
+      0: ["Sereno", "01d"],
+      1: ["Poco nuvoloso", "02d"],
+      2: ["Variabile", "02d"],
+      3: ["Nuvoloso", "03d"],
+      45: ["Nebbia", "50d"],
+      48: ["Nebbia con brina", "50d"],
+      51: ["Pioviggine leggera", "09d"],
+      53: ["Pioviggine moderata", "09d"],
+      55: ["Pioviggine intensa", "09d"],
+      61: ["Pioggia leggera", "10d"],
+      63: ["Pioggia moderata", "10d"],
+      65: ["Pioggia intensa", "10d"],
+      71: ["Neve leggera", "13d"],
+      73: ["Neve moderata", "13d"],
+      75: ["Neve intensa", "13d"],
+      95: ["Temporale", "11d"]
     };
 
-    async function getWeather() {
-      const lat = 40.7128, lon = -74.0060;
-      const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current=temperature_2m,weathercode&timezone=auto`);
-      const data = await res.json();
+    const [desc, iconCode] = conditions[code] || ["N/D", "01d"];
 
-      const temp = Math.round(data.current.temperature_2m);
-      const code = data.current.weathercode;
+    document.getElementById("temp").textContent = `${temp} °C`;
+    document.getElementById("desc").textContent = desc;
+    document.getElementById("icon").innerHTML = svgIcons[iconCode] || svgIcons["01d"];
+  } catch (err) {
+    console.error("Errore nel recupero del meteo:", err);
+    document.getElementById("desc").textContent = "Errore dati";
+  }
+}
 
-      const conditions = {
-        0: ["Sereno", "01d"],
-        1: ["Poco nuvoloso", "02d"],
-        2: ["Variabile", "02d"],
-        3: ["Nuvoloso", "03d"],
-        45: ["Nebbia", "50d"],
-        48: ["Nebbia con brina", "50d"],
-        51: ["Pioviggine leggera", "09d"],
-        53: ["Pioviggine moderata", "09d"],
-        55: ["Pioviggine intensa", "09d"],
-        61: ["Pioggia leggera", "10d"],
-        63: ["Pioggia moderata", "10d"],
-        65: ["Pioggia intensa", "10d"],
-        71: ["Neve leggera", "13d"],
-        73: ["Neve moderata", "13d"],
-        75: ["Neve intensa", "13d"],
-        95: ["Temporale", "11d"]
-      };
+// Prima chiamata immediata
+getWeather();
 
-      const [desc, iconCode] = conditions[code] || ["N/D", "01d"];
-
-      document.getElementById("temp").textContent = `${temp} °C`;
-      document.getElementById("desc").textContent = desc;
-      document.getElementById("icon").innerHTML = svgIcons[iconCode] || svgIcons["01d"];
-    }
-
-    getWeather();
-  </script>
+// Aggiorna ogni 10 minuti
+setInterval(getWeather, 600000);
+</script>
 </body>
 </html>
