--- a/widget.html
+++ b/widget.html
@@ -40,7 +40,7 @@
     gap: 8px;
   }
   .temp i {
-    font-size: 40px;
+    font-size: 32px; /* icone ridotte rispetto alla versione precedente */
     color: #F3EEEE;
   }
   .desc {
@@ -93,48 +93,4 @@ const descMapping = {
   55: "Pioviggine intensa",
   61: "Pioggia leggera",
   63: "Pioggia moderata",
-  65: "Pioggia intensa",
-  71: "Neve leggera",
-  73: "Neve moderata",
-  75: "Neve intensa",
-  95: "Temporale"
-};
-
-// Giorno/notte
-function isDay() {
-  const hour = new Date().getHours();
-  return hour >= 6 && hour < 18;
-}
-
-// Recupera e aggiorna meteo
-async function getWeather() {
-  const lat = 40.7128, lon = -74.0060;
-  try {
-    const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true&timezone=America/New_York`);
-    const data = await res.json();
-
-    const temp = Math.round(data.current_weather.temperature);
-    const code = data.current_weather.weathercode;
-
-    const day = isDay() ? 0 : 1;
-    const iconClass = weatherFAclass[code] ? weatherFAclass[code][day] : "fa-sun";
-
-    const iconEl = document.getElementById("icon");
-    iconEl.className = "fas " + iconClass;
-
-    document.getElementById("temp").textContent = `${temp} °C`;
-    document.getElementById("desc").textContent = descMapping[code] || "N/D";
-  } catch (err) {
-    console.error("Errore nel recupero del meteo:", err);
-    document.getElementById("desc").textContent = "Errore dati";
-  }
-}
-
-// Prima chiamata immediata
-getWeather();
-
-// Aggiorna ogni 10 minuti
-setInterval(getWeather, 600000);
-</script>
-</body>
-</html>
+  65: "Pio
